syntax = "proto3";

package ares.messaging;

import "google/protobuf/wrappers.proto";
import "PlannerInfo.proto";
import "ParameterMetadata.proto";

message PlannerAllocation {
	google.protobuf.StringValue unique_id = 1; // A unique id for this entity
	PlannerInfo planner = 2; // the suggested planner to use for doing the planning
	ParameterMetadata parameter = 3; // the parameter to be planned for with the given planner
}